fi(comoponents/Waitlist): fix burger align and waitlist size

--- a/src/components/Waitlist/waitlist.module.css
+++ b/src/components/Waitlist/waitlist.module.css
@@ -184,4 +184,7 @@
   .join_waitlist {
     width: 20rem;
   }
+  .text_section{
+    width: 95vw;
+  }
 }
